--- a/app/src/main/res/layout/activity_live_view.xml
+++ b/app/src/main/res/layout/activity_live_view.xml
@@ -8,8 +8,18 @@
 
 
     <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainerView"
+        android:name="com.exceptionhandlers.avante_ar.LiveViewCatalogue"
+        android:layout_width="200dp"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5"
+        tools:layout="@layout/fragment_live_view_catalogue" />
+
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/viewFragment"
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:name="com.exceptionhandlers.avante_ar.LiveViewFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -19,7 +29,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.5"
-        />
+        tools:layout="@layout/fragment_live_view" />
 
     <Button
         android:id="@+id/btnBack"
