Added LiveView Frag OnCreate
Small adjustments to catalogue xml

--- a/app/src/main/res/layout/fragment_live_view.xml
+++ b/app/src/main/res/layout/fragment_live_view.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".LiveViewFragment">
 
+    <!--Camera viewport-->
     <io.github.sceneview.ar.ARSceneView
         android:id="@+id/sceneView"
         android:layout_width="match_parent"
