--- a/app/src/main/res/layout/activity_live_view.xml
+++ b/app/src/main/res/layout/activity_live_view.xml
@@ -6,18 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".LiveViewActivity">
 
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragmentContainerView"
-        android:name="com.exceptionhandlers.avante_ar.LiveViewCatalogue"
-        android:layout_width="200dp"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5"
-        tools:layout="@layout/fragment_live_view_catalogue" />
-
+    <!--Viewport fragment (AR fragment)-->
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/viewFragment"
         android:name="com.exceptionhandlers.avante_ar.LiveViewFragment"
@@ -25,11 +14,24 @@
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5"
+        app:layout_constraintVertical_bias="1.0"
         tools:layout="@layout/fragment_live_view" />
+
+    <!--Catalogue fragment-->
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/catalogueFragment"
+        android:name="com.exceptionhandlers.avante_ar.LiveViewCatalogue"
+        android:layout_width="200dp"
+        android:layout_height="match_parent"
+        android:background="#E40101"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5"
+        tools:layout="@layout/fragment_live_view_catalogue" />
 
     <Button
         android:id="@+id/btnBack"
