Added catalogue menu fragment
- Can open and close catalogue fragment in liveView Activity

--- a/app/src/main/res/layout/activity_live_view.xml
+++ b/app/src/main/res/layout/activity_live_view.xml
@@ -21,17 +21,21 @@
         tools:layout="@layout/fragment_live_view" />
 
     <!--Catalogue fragment-->
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/catalogueFragment"
-        android:name="com.exceptionhandlers.avante_ar.LiveViewCatalogue"
-        android:layout_width="200dp"
-        android:layout_height="match_parent"
-        android:background="#E40101"
+
+    <ImageButton
+        android:id="@+id/imgBtnCatOpen"
+        android:layout_width="70dp"
+        android:layout_height="73dp"
+        android:background="@null"
+        android:scaleType="fitCenter"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5"
-        tools:layout="@layout/fragment_live_view_catalogue" />
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/cat_arrow" />
 
     <Button
         android:id="@+id/btnBack"
@@ -54,5 +58,32 @@
         app:layout_constraintStart_toEndOf="@+id/btnBack"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.976" />
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/catalogueFragment"
+        android:name="com.exceptionhandlers.avante_ar.LiveViewCatalogue"
+        android:layout_width="200dp"
+        android:layout_height="match_parent"
+        android:background="#E40101"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout="@layout/fragment_live_view_catalogue" />
+
+    <ImageButton
+        android:id="@+id/imgBtnCatClose"
+        android:layout_width="70dp"
+        android:layout_height="73dp"
+        android:background="@null"
+        android:scaleType="fitCenter"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.618"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/cat_arrow" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
