Near finishing catalogue grid
-Added potential fix for Depth API null error

--- a/app/src/main/res/layout/fragment_live_view.xml
+++ b/app/src/main/res/layout/fragment_live_view.xml
@@ -7,9 +7,10 @@
 
     <!--Camera viewport-->
     <io.github.sceneview.ar.ARSceneView
-        android:id="@+id/sceneView"
+        android:id="@+id/sceneViewLive"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
 
 
 </FrameLayout>
