Minor catalogue adjustments

--- a/app/src/main/res/layout/activity_live_view.xml
+++ b/app/src/main/res/layout/activity_live_view.xml
@@ -66,7 +66,7 @@
         android:name="com.exceptionhandlers.avante_ar.LiveViewCatalogue"
         android:layout_width="match_parent"
         android:layout_height="340dp"
-        android:background="#40000000"
+        android:background="#667AFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -86,7 +86,7 @@
         app:layout_constraintHorizontal_bias="0.897"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.53"
+        app:layout_constraintVertical_bias="0.571"
         app:srcCompat="@drawable/cat_arrow" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
