--- a/app/src/main/res/layout/fragment_live_view_catalogue.xml
+++ b/app/src/main/res/layout/fragment_live_view_catalogue.xml
@@ -4,7 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".LiveViewCatalogue">
+    tools:context=".LiveViewCatalogue"
+    tools:viewBindingIgnore="true"
+    >
 
     <!-- TODO: Update blank fragment layout -->
     <ScrollView
