--- a/app/src/main/res/layout/fragment_live_view_catalogue.xml
+++ b/app/src/main/res/layout/fragment_live_view_catalogue.xml
@@ -35,33 +35,29 @@
             android:layout_margin="12dp">
 
 
-
-
-
             <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-                android:background="@color/white">
+                android:id="@+id/lyCard1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white"
+                android:orientation="vertical">
 
-             <ImageView
+                <ImageView
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:src="@drawable/sofa"
                     android:layout_gravity="center"
                     android:clickable="true"
-                    android:onClick="onSofaClick"
-                   />
 
-             <TextView
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:layout_gravity="center"
-                  android:textSize="18sp"
-                  android:textStyle="bold"
-                 android:textColor="@color/black"
-                 android:text="@string/objPlaceholder"
-                  />
+                    android:src="@drawable/sofa" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/objPlaceholder"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
