--- a/app/src/main/res/layout/activity_live_view.xml
+++ b/app/src/main/res/layout/activity_live_view.xml
@@ -108,17 +108,14 @@
         app:layout_constraintVertical_bias="0.571"
         app:srcCompat="@drawable/cat_arrow" />
 
-    <ToggleButton
-        android:id="@+id/tglBtnDepthAPI"
-        android:layout_width="106dp"
+    <Button
+        android:id="@+id/btnDepth"
+        android:layout_width="122dp"
         android:layout_height="64dp"
-        android:layout_marginEnd="48dp"
-        android:text="ToggleButton"
-        android:textOff="Turn on depth"
-        android:textOn="Turn off depth"
+        android:text="Depth"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imgBtnCatOpen"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.375"
         app:layout_constraintStart_toEndOf="@+id/btnBack"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.976" />
