--- a/app/src/main/res/layout/fragment_live_view_catalogue.xml
+++ b/app/src/main/res/layout/fragment_live_view_catalogue.xml
@@ -24,6 +24,7 @@
         android:layout_marginTop="-8dp">
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/lyCard1"
             android:layout_width="150dp"
             android:layout_height="@dimen/card_view_height"
             android:layout_row="1"
@@ -32,15 +33,16 @@
             android:layout_columnWeight="1"
             app:cardCornerRadius="15dp"
             app:cardElevation="12dp"
-            android:layout_margin="12dp">
+            android:layout_margin="12dp"
+            android:clickable="true">
 
 
             <LinearLayout
-                android:id="@+id/lyCard1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/white"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:clickable="true">
 
                 <ImageView
                     android:layout_width="80dp"
