--- a/app/src/main/res/layout/fragment_live_view_catalogue.xml
+++ b/app/src/main/res/layout/fragment_live_view_catalogue.xml
@@ -38,11 +38,12 @@
 
 
             <LinearLayout
+                android:id="@+id/sofa"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/white"
-                android:orientation="vertical"
-                android:clickable="true">
+                android:clickable="true"
+                android:orientation="vertical">
 
                 <ImageView
                     android:layout_width="80dp"
@@ -74,33 +75,29 @@
             android:layout_margin="12dp">
 
 
-
-
-
             <LinearLayout
+                android:id="@+id/shelf"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:background="@color/white">
+                android:background="@color/white"
+                android:orientation="vertical">
 
                 <ImageView
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:src="@drawable/shelf"
                     android:layout_gravity="center"
                     android:clickable="true"
                     android:onClick="onShelfClick"
-                    />
+                    android:src="@drawable/shelf" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"
                     android:text="@string/objPlaceholder"
-                    />
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
