Homepage XML updates, added gridview with 4 buttons

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,5 +7,5 @@
 
     <style name="Theme.AvanteAR" parent="Base.Theme.AvanteAR" />
 
-    <style name="Theme.AvanteActionBar" parent="Theme.AppCompat.Light.DarkActionBar" />
+    <style name="Theme.AvanteActionBar" parent="Theme.AppCompat.DayNight" />
 </resources>
